--- a/UIwithTemplate/assets/styles.css
+++ b/UIwithTemplate/assets/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap');
+
 .js-plotly-plot .plotly .modebar {
   padding-top: 5%;
   margin-right: 3.5%;
